Align status cards correctly.

--- a/src/components/statusCard/styles/StatusCard.scss
+++ b/src/components/statusCard/styles/StatusCard.scss
@@ -46,10 +46,14 @@
 :global(.status-card-wrapper) {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 
     .statusCard {
         width: calc((100% - #{$status-card-margin} * 3) / 4);
         margin-bottom: $status-card-margin;
+        margin-right: 10px;
+
+        &:nth-child(4n) {
+            margin-right: 0;
+        }
     }
 }
